fix alignment of show page icons with text

--- a/app/assets/stylesheets/earthworks.css
+++ b/app/assets/stylesheets/earthworks.css
@@ -24,6 +24,10 @@ header .container,
   line-height: 1.125rem;
 }
 
+.show-document .header-icons .label {
+  vertical-align: middle;
+}
+
 .header-icons .blacklight-icons,
 .header-icons .blacklight-icons svg {
   height: 0.875rem;
